# src/api/models/ExamQuestionEdit.ts
@@ -1,0 +1,156 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Backend API
+ * API documentation for the backend service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { NormalizedExamQuestionPayload } from './NormalizedExamQuestionPayload';
+import {
+    NormalizedExamQuestionPayloadFromJSON,
+    NormalizedExamQuestionPayloadFromJSONTyped,
+    NormalizedExamQuestionPayloadToJSON,
+    NormalizedExamQuestionPayloadToJSONTyped,
+} from './NormalizedExamQuestionPayload';
+import type { ExamQuestionType } from './ExamQuestionType';
+import {
+    ExamQuestionTypeFromJSON,
+    ExamQuestionTypeFromJSONTyped,
+    ExamQuestionTypeToJSON,
+    ExamQuestionTypeToJSONTyped,
+} from './ExamQuestionType';
+
+/**
+ * 
+ * @export
+ * @interface ExamQuestionEdit
+ */
+export interface ExamQuestionEdit {
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    operationId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    changeSetId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    op: ExamQuestionEditOpEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    clientId: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    afterClientId: string | null;
+    /**
+     * 
+     * @type {ExamQuestionType}
+     * @memberof ExamQuestionEdit
+     */
+    type: ExamQuestionType | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExamQuestionEdit
+     */
+    yaml: string;
+    /**
+     * 
+     * @type {NormalizedExamQuestionPayload}
+     * @memberof ExamQuestionEdit
+     */
+    normalized?: NormalizedExamQuestionPayload;
+}
+
+
+/**
+ * @export
+ */
+export const ExamQuestionEditOpEnum = {
+    Update: 'update',
+    Create: 'create',
+    Delete: 'delete',
+    Reorder: 'reorder'
+} as const;
+export type ExamQuestionEditOpEnum = typeof ExamQuestionEditOpEnum[keyof typeof ExamQuestionEditOpEnum];
+
+
+/**
+ * Check if a given object implements the ExamQuestionEdit interface.
+ */
+export function instanceOfExamQuestionEdit(value: object): value is ExamQuestionEdit {
+    if (!('operationId' in value) || value['operationId'] === undefined) return false;
+    if (!('changeSetId' in value) || value['changeSetId'] === undefined) return false;
+    if (!('op' in value) || value['op'] === undefined) return false;
+    if (!('clientId' in value) || value['clientId'] === undefined) return false;
+    if (!('afterClientId' in value) || value['afterClientId'] === undefined) return false;
+    if (!('type' in value) || value['type'] === undefined) return false;
+    if (!('yaml' in value) || value['yaml'] === undefined) return false;
+    return true;
+}
+
+export function ExamQuestionEditFromJSON(json: any): ExamQuestionEdit {
+    return ExamQuestionEditFromJSONTyped(json, false);
+}
+
+export function ExamQuestionEditFromJSONTyped(json: any, ignoreDiscriminator: boolean): ExamQuestionEdit {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'operationId': json['operationId'],
+        'changeSetId': json['changeSetId'],
+        'op': json['op'],
+        'clientId': json['clientId'],
+        'afterClientId': json['afterClientId'],
+        'type': ExamQuestionTypeFromJSON(json['type']),
+        'yaml': json['yaml'],
+        'normalized': json['normalized'] == null ? undefined : NormalizedExamQuestionPayloadFromJSON(json['normalized']),
+    };
+}
+
+export function ExamQuestionEditToJSON(json: any): ExamQuestionEdit {
+    return ExamQuestionEditToJSONTyped(json, false);
+}
+
+export function ExamQuestionEditToJSONTyped(value?: ExamQuestionEdit | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'operationId': value['operationId'],
+        'changeSetId': value['changeSetId'],
+        'op': value['op'],
+        'clientId': value['clientId'],
+        'afterClientId': value['afterClientId'],
+        'type': ExamQuestionTypeToJSON(value['type']),
+        'yaml': value['yaml'],
+        'normalized': NormalizedExamQuestionPayloadToJSON(value['normalized']),
+    };
+}
+
